--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 js/main.js
-favicon.ico
+favicon.png
 index.html
 js/vendor/jquery-1.8.2.min.js
 css/main.css
 css/normalize.css
 css/normalize.min.css
+.DS_Store
